szkolenie-k8s/PART6-Ingress/LAB2/ingress-hosts.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: color-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: blue.local      # <--- Reguła dla domeny BLUE
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: blue-svc
                port:
                  number: 80
    - host: green.local     # <--- Reguła dla domeny GREEN
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: green-svc
                port:
                  number: 80
